# sb-python-issues

supabase_admin_delete_user/: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml
supabase_admin_delete_user/supabase/: .gitignore  config.toml  seed.sql
supabase_discord_pdf_uploading/: .env  README.md  app.py  package-lock.json  package.json  pyproject.toml
supabase_discord_pdf_uploading/supabase/: config.toml  seed.sql
supabase_functions_error_handling/: README.md  app.js  app.py  package-lock.json  package.json  pyproject.toml
supabase_functions_error_handling/supabase/: config.toml
supabase_phone_password_signup/: .env  README.md  package-lock.json  package.json  pyproject.toml
supabase_phone_password_signup/app/: fastapi_storage.py  main.py
supabase_phone_password_signup/supabase/: config.toml  seed.sql
supabase_py_1030/: README.md  app.py  package-lock.json  package.json  pyproject.toml
supabase_py_1030/supabase/: config.toml  seed.sql
supabase_py_1030/supabase/migrations/: 20241226114746_add_countries_cities.sql
supabase_py_1075/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  main.ts  package-lock.json  package.json  pyproject.toml
supabase_py_1075/supabase/: config.toml  seed.sql
supabase_resend_signup/: README.md  package-lock.json  package.json  pyproject.toml
supabase_resend_signup/app/: main.py
supabase_resend_signup/supabase/: config.toml
supabase_signout_scope/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
supabase_signout_scope/app/: main.py
(+5 files in other folders)
